--- a/src/css/global.css
+++ b/src/css/global.css
@@ -260,7 +260,7 @@ p{
     background-color: #1d1d1d;
     box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black;
     color: white;
-    font-size: 1.5em;
+    font-size: 1.3em;
     height: fit-content;
     width: max-content;
     top: 8px;
@@ -298,7 +298,7 @@ p{
     margin-left: 1em;
     margin-right: auto;
     margin-top: auto;
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 
 .email-contact{
@@ -376,6 +376,11 @@ p{
 
 
 /*******************Home**********************/
+.home-switch{
+    display: flex;
+    justify-content: center;
+    transform: scale(1.25);
+}
 
 .home-content{
     display: flex;
@@ -630,6 +635,10 @@ pre span{
 
 .punctuation{
     color: #fb842a;
+}
+
+.parameter{
+    color: #c780f7;
 }
 
 
@@ -930,7 +939,7 @@ input:checked + .switcher:before {
     flex-grow: 1;
     justify-content: center;
     height: 18em;
-    gap:1.1em;
+    gap:2em;
     margin-top: 1.5%;
 }
 
@@ -938,13 +947,13 @@ input:checked + .switcher:before {
     margin-top: .5%;
 }
 
-.tubes { 
+/* .tubes { 
     margin-inline: auto; 
     display: flex; 
     flex-wrap: wrap; 
-    gap: 2rem; 
+    gap: 5em; 
     justify-content: center;
-}
+} */
 
 .tube {
     --width: calc(8vw + 0.6rem); 
@@ -1474,7 +1483,7 @@ input:checked + .switcher:before {
 }
 
 .my-description{
-    width: 40%;
+    width: 45%;
     margin: 0;
     margin-left: 2%;
     pointer-events: none;
@@ -1493,30 +1502,24 @@ input:checked + .switcher:before {
     pointer-events: none;
 }
 
-.sitemap-link{
-    color: #fff8ba !important;
-    cursor: pointer !important;
-    text-decoration: none;
-    text-align: center;
-}
-
 .copyright{
     font-family: 'Barlow';
 }
 
 .footer-link-container{
-    height: 80%;
+    /* height: 80%; */
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     font-size: 1em;
-    width: 20%;
+    /* width: 20%; */
     text-align: left;
-    margin: auto;
+    /* margin: auto; */
     position: relative;
-    bottom: 6px;
-    padding: .5em;
-    padding-right: 0;
+    /* bottom: 6px; */
+    padding: 0 2em;
+    border-left: #fff8ba27 1px solid;
+    border-right: #fff8ba27 1px solid;
 }
 
 .footer-link-inner{
@@ -1530,7 +1533,7 @@ input:checked + .switcher:before {
 }
 
 .footer-links span{
-    
+    margin: 5px 10px;
     cursor: pointer;
 }
 
@@ -1539,9 +1542,22 @@ input:checked + .switcher:before {
     flex-direction: column;
     margin: auto;
     justify-content: space-around;
-    border-left: #fff8ba27 1px solid;
-    border-right: #fff8ba27 1px solid;
-    padding: 2% .85em 0;
+    /* border-left: #fff8ba27 1px solid;
+    border-right: #fff8ba27 1px solid; */
+    padding: 0;
+}
+
+.socials{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 10%;
+}
+
+.sitemap-link{
+    color: #fff8ba !important;
+    cursor: pointer !important;
+    text-decoration: none;
+    text-align: center;
 }
 
 
@@ -1553,13 +1569,6 @@ input:checked + .switcher:before {
     flex-grow: 1;
     width: max-content;
 }
-
-.socials{
-    display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 10%;
-}
-
 
 /**********************Media Queries*********************/
 
@@ -1595,16 +1604,6 @@ input:checked + .switcher:before {
         left: 63%;
     }
     
-
-    /*----------FOOTER----------*/
-    .middle-container{
-        padding: 0% 4% 0;
-        margin-right: 0;
-    }
-
-    .footer-links span {
-        letter-spacing: 1.5px;
-    }
 }
 
 /******XX-Large devices (large desktops, 1399px and below)******/
@@ -1619,6 +1618,9 @@ input:checked + .switcher:before {
     }
 
     /*-------BOTTOM CONTAINER-------*/
+    .side-display{
+        margin-left: 3em;
+    }
     #finished2{
         left: -15%;
     }
@@ -1626,6 +1628,12 @@ input:checked + .switcher:before {
     .thought-bubble {
         left: 57%;
     }
+
+    /*----------FOOTER----------*/
+    .my-description{
+        width: 40%;
+    }
+
 }
 
 /******XX-Large devices (large desktops, 1200px and below)******/
@@ -1638,6 +1646,11 @@ input:checked + .switcher:before {
 
     .about-me-p{
         font-size: 18px;
+    }
+
+    .nav-switch{
+        transform: scale(.9);
+        padding-left: .9em;
     }
 
      /*----------TOP CONTAINER----------*/
@@ -1656,8 +1669,12 @@ input:checked + .switcher:before {
     }
 
     .side-display{
-        margin-left: 1em;
+        margin-left: 1.5em;
         padding-left: 1em;
+    }
+
+    .row{
+        gap: 1.5em;
     }
 
     .cap{
@@ -1677,13 +1694,30 @@ input:checked + .switcher:before {
     }
 
     /*----------FOOTER----------*/
+    .footer{
+        padding-top: 0;
+    }
+
+    .my-description{
+        width: 45%;
+    }
+
     .footer-link-container{
         font-size: .9em;
+        padding: 0;
+        margin-top: 1em;
+        margin-left: 5px;
+        width: 20%;
     }
 
     .footer-link-inner {
         flex-direction: column;
         margin: auto;
+    }
+
+    .middle-container{
+        margin-top: 0;
+        margin-bottom: 0;
     }
 }
 
@@ -1708,10 +1742,28 @@ input:checked + .switcher:before {
     pre{
         font-size: 1.1em !important;
     }
+
+    .row{
+        gap: 1.2em;
+    }
+
+    .side-display{
+        margin-left: 1em;
+    }
+
+    ----------FOOTER----------
+    .my-description{
+        margin-right: 5px;
+    }
 }
 
 /******X-Large devices (desktops, 992px and below)******/
 @media (max-width: 992px) {
+    /*---------NAVBAR---------*/
+    .contacts{
+        font-size: 1.1em;
+    }
+
     /*----------HOME----------*/
     .header-container{
         padding-right: 12%;
@@ -1737,10 +1789,6 @@ input:checked + .switcher:before {
 
      /*---------NAVBAR----------*/
      .in-nav-container span{
-        font-size: 16px;
-    }
-
-    .about-me-p{
         font-size: 16px;
     }
 
@@ -1803,15 +1851,15 @@ input:checked + .switcher:before {
     .my-description{
         width: 80%;
         margin: 0 0 0 7%;
-        font-size: .8em;
+        font-size: 1em;
+        padding-bottom: 2%;
     }
 
     .middle-container{
         width: 40%;
         border-left: none;
         border-right: none;
-        border-top: #fff8ba0a 1px solid;
-        margin-top: 3%;
+        margin-top: auto;
     }
 
     .socials{
@@ -1821,7 +1869,7 @@ input:checked + .switcher:before {
 
     .copyright-container{
         margin: auto;
-       font-size: .7em;
+       font-size: .9em;
     }
 
     .footer-link-container{
@@ -1829,9 +1877,9 @@ input:checked + .switcher:before {
         bottom: 0px;
         padding: 0;
         margin: 0;
-        margin-top: 2%;
-        border-top: #fff8ba0a 1px solid;
-        font-size: .8em;
+        font-size: 1em;
+        border-left: none;
+        border-right: none;
     }
 
     .footer-link-inner {
@@ -1844,9 +1892,31 @@ input:checked + .switcher:before {
     } 
 }
 
+/******(900px and below)******/
+@media (max-width: 900px) {
+    /*----------NAVBAR----------*/
+    .nav-switch{
+        padding-left: 2em;
+    }
+
+    .about-me-p{
+        font-size: .8em;
+    }
+
+    .row{
+        gap: 1em;
+    }
+
+    .cap{
+        font-size: 1.15em;
+        padding: 5px 0;
+    }
+    
+}
+
 /******(840px and below)******/
 @media (max-width: 840px) {
-    /*----------TOP CONTAINER----------*/
+    /*-------TOP CONTAINER------*/
     .explanation{
         font-size: 1.15em;
     }
@@ -1855,10 +1925,7 @@ input:checked + .switcher:before {
     .row{
         height: 15em;
         padding-right: 1.5em;
-    }
-    
-    .cap{
-        font-size: large;
+        gap: .7em;
     }
 
     .thought-bubble{
@@ -1878,6 +1945,16 @@ input:checked + .switcher:before {
 
 /******Medium Devices (landscape phones, 768px and below)******/
 @media (max-width: 768px) {
+    /*----------NAVBAR----------*/
+    .about-me-div{
+        font-size: 1.1em;
+        padding: .5em 1em;
+    }
+
+    .contacts{
+        font-size: 1em;
+    }
+
     /*----------HOME----------*/
     .header-container{
         padding-left: 6%;
@@ -1897,8 +1974,8 @@ input:checked + .switcher:before {
     }
 
     .card{
-    max-width: fit-content;
-    margin: 2em;
+        max-width: fit-content;
+        margin: 2em;
     }
 
     .card:hover{
@@ -1922,10 +1999,6 @@ input:checked + .switcher:before {
 
     /*--------BOTTOM CONTAINER---------*/
     /*----------TUBES----------*/
-    #finished2{
-        left: -90%;
-    }
-
     .bottom-container{
         flex-direction: column-reverse;
         margin-top: 0;
@@ -1969,12 +2042,16 @@ input:checked + .switcher:before {
         gap: 1.5em;
     }
 
+    .cap{
+        font-size: 1.15em;
+    }
+
     .tube{
         width: 100%;
     }
 
     .thought-bubble{
-        left: 45%;
+        left: 55%;
         font-size: 1em;
     }
 
@@ -1997,7 +2074,7 @@ input:checked + .switcher:before {
     }
 
     .socials{
-        margin: .6em 0;
+        margin: 2% 0;
     }
 
     .footer-link-inner{
@@ -2011,6 +2088,16 @@ input:checked + .switcher:before {
 
 /******Small Devices (600px and below)******/
 @media (max-width: 600px) {
+    /*----------NAVBAR----------*/
+    .nav-switch{
+        transform: scale(.9);
+        padding-left: 1em;
+    }
+
+    .about-me-p{
+        font-size: .7em;
+    }
+
     /*----------HOME----------*/
     .header-container h1{
         font-size: 35px;
@@ -2059,6 +2146,11 @@ input:checked + .switcher:before {
         width: 100%;
     }
 
+    .cap{
+        font-size: .9em;
+        padding: 5px 0;
+    }
+
     .thought-bubble{
         left: 32%;
     }
@@ -2072,14 +2164,9 @@ input:checked + .switcher:before {
     }
 
     /*----------FOOTER----------*/
-    .footer{
-        padding-top: 5%;
-    }
-
     .my-description{
         width: 100%;
         margin: 0 auto 0 3%;
-        font-size: .9em;
     }
 
     .middle-container{
@@ -2088,7 +2175,7 @@ input:checked + .switcher:before {
     }
 
     .socials a{
-        margin: 5%;
+        margin: 2%;
     }
 
     .copyright-container{
@@ -2100,7 +2187,7 @@ input:checked + .switcher:before {
     .footer-link-container{
         width: 100%;
         font-size: 1em;
-        margin: 2% 10%;
+        margin: 0% 10%;
     }
 
     .ava{
@@ -2113,10 +2200,14 @@ input:checked + .switcher:before {
 }
 
 @media (max-width: 490px) {
-    /*--------NAVBAR----------*/
+    /*----------NAVBAR----------*/
+    .nav-switch{
+        transform: scale(.8);
+        padding-left: 0;
+    }
+
     .about-me-p{
         margin-left: 0;
-        font-size: 14px;
     }
 
     /*----------TOP CONTAINER----------*/
@@ -2127,16 +2218,41 @@ input:checked + .switcher:before {
     /*--------BOTTOM CONTAINER---------*/
     .side-display{
         width: 70%;
+    transform: scale(.8);
+    margin-top: 1%;
     }
 
     .row{
         height: 12em;
+        gap: 1em;
     }
 
     .thought-bubble{
-        font-size: .8em;
-        left: 25%;
+        font-size: .75em;
+        left: 40%;
+        
+        top: 20%;
+        padding: 10px 25px;
     }
+
+    #finished2{
+        font-size: 2em;
+        left: -55%;
+        top: 55px;
+    }
+}
+
+@media (max-width: 460px) {
+/*--------NAVBAR----------*/
+.about-me-p{
+    font-size: .6em;
+}
+
+.row{
+    gap: .5em;
+}
+
+
 }
 
 @media (max-width: 420px) {
@@ -2160,14 +2276,21 @@ input:checked + .switcher:before {
     .thought-bubble{
         left: 15%;
     }
-
-    #finished2{
-        font-size: 1em;
-    }
 }
 
 /******Extra Small Devices (393px and below)******/
 @media (max-width: 393px) {
+   /*----------NAVBAR----------*/
+   .nav-switch{
+    transform: scale(.65);
+    padding-left: 0;
+    }
+
+    .about-me-p{
+        font-size: .55em;
+    }
+
+
     /*----------HOME----------*/
     .header-container{
         padding-left: 1%;
@@ -2207,12 +2330,15 @@ input:checked + .switcher:before {
 
     .row{
         height: 10em;
-        gap: .5em;
     }
 
     .thought-bubble{
-        font-size: .65em;
-        left: 5%;
+        font-size: .85em;
+        padding: 4px 20px;
+    }
+
+    .cap{
+        font-size: .8em;
     }
 
     /*----------FOOTER----------*/
@@ -2235,8 +2361,9 @@ input:checked + .switcher:before {
 
     .my-description{
         width: 80%;
-        margin: 0 auto 0 5%;
+        margin: 0 auto 0;
         margin-right: -5px;
+        font-size: .9em;
     }
 
     .middle-container{
@@ -2269,7 +2396,31 @@ input:checked + .switcher:before {
         letter-spacing: 1.5px;
     }
 }
+/******Extra Small Devices (359px and below)******/
+@media (max-width: 359px) {
+    .footer{
+        padding-top: 4%;
+    }
 
+    .my-description{
+        width: 100%;
+    }
+
+    .cap{
+        font-size: .7em;
+    }
+
+    .thought-bubble{
+        left: 0%;
+    }
+
+    #finished2{
+        font-size: 1.5em;
+        left: -60%;
+    }
+}
+
+/******Extra Small Devices (300px and below)******/
 @media (max-width: 300px) {
     /*----------HOME----------*/
     .header-title-1.tiny{
@@ -2304,11 +2455,10 @@ input:checked + .switcher:before {
         padding-top: 1em;
     }
 
-    .thought-bubble{
-        padding-left: 2em;
-        padding-right: 2em;
-        left: .5em;
+    #finished2{
+        font-size: 1em;
     }
+
     /*----------FOOTER----------*/
     .footer{
         justify-content: center;
