--- a/src/css/global.css
+++ b/src/css/global.css
@@ -266,7 +266,7 @@ p{
     background-color: #1d1d1d;
     box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black;
     color: white;
-    font-size: 1.3em;
+    font-size: 1.2em;
     height: fit-content;
     width: max-content;
     top: 8px;
@@ -275,7 +275,7 @@ p{
 }
 
 .hamburger.about-me-div{
-    padding: 0em 1em 1em;
+    padding: 1em 1.25em;
 }
 
 .about-me-div a{
@@ -284,10 +284,6 @@ p{
     line-height: 1em;
     margin-top: 1em;
     color: ghostwhite;
-}
-
-.menu-background{
-    background-color: #f06c07;
 }
 
 .map-box{
@@ -494,6 +490,7 @@ p{
     margin: 2% auto;
     pointer-events: none;
     letter-spacing: .5px;
+    font-size: 1.1em;
 }
 
 .insertion-explanation-heading{
@@ -516,6 +513,8 @@ p{
 .explanation {
 	font-size: 1.25em;
     width: 60%;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .explanation-list{
@@ -535,15 +534,15 @@ p{
 
 .explanation-list li::before{
     position: relative;
-    top: 1px;
+    bottom: 2px;
     content: "";
     background: radial-gradient( 80% 75% at 67% 43%, #abaed1, #1210ed 90% );
-    width: 1rem;
-    height: 1rem;
+    width: .75rem;
+    height: .75rem;
     border-radius: 50%;
     display: inline-block;
     color: white;
-    margin-right: 0.5rem;
+    margin-right: 0.4rem;
 }
   
 .insertion-explanation-list{
@@ -604,27 +603,6 @@ p{
 
 
 /*********************Method********************/
-
-/*     --background: white;
-    --foreground: black;
-    color-scheme: light;
-    font-size: 1.3em !important;
-    padding: .5em 1em !important;
-    text-align: left;
-    white-space: pre;
-    word-spacing: normal;
-    word-break: normal;
-    overflow-wrap: normal;
-    color: rgb(238, 238, 238);
-    background: rgb(47, 47, 47);
-    font-family: "Roboto Mono", monospace;
-    line-height: 1.5em;
-    tab-size: 4;
-    hyphens: none;
-    overflow: auto;
-    position: relative;
-    margin: 0.5em 0px;
-     */
 
 .method{    
     margin-top: auto;
@@ -1232,10 +1210,6 @@ input:checked + .switcher:before {
     z-index: -1;
 }
 
-.move-the-bubble{
-    top: 33%;
-}
-
 .swap{
     display: none;
 }
@@ -1288,6 +1262,11 @@ input:checked + .switcher:before {
     position: relative;
 }
 
+.move-the-bubble{
+    top: 28%;
+}
+
+
 
 /****************Selection Tubes******************/
 
@@ -1295,8 +1274,6 @@ input:checked + .switcher:before {
     display: flex;
     flex-grow: 1;
     justify-content: center;
-    height: 20em;
-    gap:1.1em;
     margin-top: 1.5%;
 }
 
@@ -1323,19 +1300,18 @@ input:checked + .switcher:before {
     z-index: 5;
 	background: rgb(255, 239, 224);
 	border-radius: 35px;
-    padding: 10px 10px 10px;
+    padding: 4px 10px 10px;
 	text-align: center;
     width: 100%;
     top: 20%;
     left: -12%;
     border: solid black;
+    font-size: 1em;
 }
 
 .thought-bubble.selection-bubble p{
     text-transform: none;
     margin: 10px 0 10px;
-    font-size: 1.1em;
-    font-weight: 600;
 }
 
 .thought-bubble.selection-bubble div{
@@ -1352,10 +1328,7 @@ input:checked + .switcher:before {
     display: none;
 }
 
-.selection-div{
-    font-size: 1em;
-    width: 6em;
-}
+
 
 
 /****************Quick Sort Tubes******************/
@@ -1498,7 +1471,7 @@ input:checked + .switcher:before {
 .hi{
     font-size: 20px;
     font-weight: 600;
-    margin-top: .5em;
+    margin-top: .25em;
     margin-bottom: .1em;
 }
 
@@ -1553,7 +1526,7 @@ input:checked + .switcher:before {
 }
 
 .footer-links span{
-    margin: 5px 10px;
+    margin: 0px 10px 5px;
     cursor: pointer;
 }
 
@@ -1571,6 +1544,7 @@ input:checked + .switcher:before {
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 10%;
+    margin-top: 10%;
 }
 
 .sitemap-link{
@@ -1623,6 +1597,10 @@ input:checked + .switcher:before {
     .thought-bubble {
         left: 63%;
     }
+
+    .move-the-bubble{
+        left: 68%;
+    }
     
 }
 
@@ -1647,6 +1625,10 @@ input:checked + .switcher:before {
 
     .thought-bubble {
         left: 57%;
+    }
+
+    .move-the-bubble{
+        left: 60%;
     }
 
     /*----------FOOTER----------*/
@@ -1709,6 +1691,10 @@ input:checked + .switcher:before {
         left: 48%;
     }
 
+    .move-the-bubble{
+        left: 55%;
+    }
+
     #finished2{
         left: -30%;
     }
@@ -1724,6 +1710,7 @@ input:checked + .switcher:before {
 
     .my-description{
         width: 45%;
+        font-size: .9em;
     }
 
     .footer-link-container{
@@ -1745,6 +1732,15 @@ input:checked + .switcher:before {
     }
 }
 
+@media (max-width: 1100px) {
+    .thought-bubble.selection-bubble{
+        padding: 3px 10px 10px;
+        top: 17%;
+        left: -12%;
+        font-size: 1em;
+    }
+}
+
 /******X-Large devices ( 1079px and below)******/
 @media (max-width: 1079px) {
     /*----------TOP CONTAINER----------*/
@@ -1757,6 +1753,14 @@ input:checked + .switcher:before {
         margin-left: auto;
         margin-right: auto;
         font-size: 1.35em;
+    }
+
+    .explanation-heading{
+        font-size: 1em;
+    }
+
+    .explanation-list li{
+        font-size: 1.05;
     }
 
     .method{
@@ -1775,7 +1779,22 @@ input:checked + .switcher:before {
         margin-left: 1em;
     }
 
-    ----------FOOTER----------
+    .move-the-bubble{
+        left: 50%;
+    }
+
+    .thought-bubble.selection-bubble{
+        padding: 3px 10px 10px;
+        top: 15%;
+        left: -12%;
+        font-size: .95em;
+    }
+
+    /*----------FOOTER----------*/
+    .footer{
+        padding: 0em .5% 1em 1%;
+    }
+
     .my-description{
         margin-right: 5px;
     }
@@ -1856,6 +1875,10 @@ input:checked + .switcher:before {
         left: 35%;
     }
 
+    .move-the-bubble{
+        left: 41%;
+    }
+
     #finished2{
         left: -60%;
     }
@@ -1866,7 +1889,6 @@ input:checked + .switcher:before {
         flex-wrap: wrap;
         padding-top: 2%;
         justify-content: center;
-        padding: 2% 0% 1em 2%;
     }
 
     .footer span{
@@ -1893,7 +1915,7 @@ input:checked + .switcher:before {
     }
 
     .socials{
-        margin-bottom: 5%;
+        margin-bottom: 3%;
     }
 
 
@@ -1907,7 +1929,7 @@ input:checked + .switcher:before {
         bottom: 0px;
         padding: 0;
         margin: 0;
-        font-size: 1em;
+        font-size: .9em;
         border-left: none;
         border-right: none;
     }
@@ -1916,10 +1938,6 @@ input:checked + .switcher:before {
         margin: auto 10%;
         flex-direction: row;
     }
-
-    .footer-links span {
-        letter-spacing: 1.5px;
-    } 
 }
 
 /******(900px and below)******/
@@ -1940,6 +1958,15 @@ input:checked + .switcher:before {
     .cap{
         font-size: 1.15em;
         padding: 5px 0;
+    }
+
+    .move-the-bubble{
+        left: 33%;
+    }
+
+    .thought-bubble.selection-bubble{
+        left: -20%;
+        font-size: .9em;
     }
     
 }
@@ -1971,13 +1998,19 @@ input:checked + .switcher:before {
         font-size: 1em;
     }
 
+    .thought-bubble.selection-bubble{
+        padding: 2px 10px 7px;
+        top: 17%;
+        
+        font-size: .80em;
+    }
+
 }
 
 /******Medium Devices (landscape phones, 768px and below)******/
 @media (max-width: 768px) {
     /*----------NAVBAR----------*/
     .about-me-div{
-        font-size: 1.1em;
         padding: .5em 1em;
     }
 
@@ -2027,6 +2060,13 @@ input:checked + .switcher:before {
         font-size: 1.1em;
     }
 
+    .explanation-list li::before{
+        bottom: 3px;
+        width: .5em;
+        height: .5em;
+        margin-right: 0.2rem;
+    }
+
     /*--------BOTTOM CONTAINER---------*/
     /*----------TUBES----------*/
     .bottom-container{
@@ -2064,6 +2104,7 @@ input:checked + .switcher:before {
         font-size: 1.15em;
     }
 
+    /*----------TUBES----------*/
     .row{
         transform: none;
         padding: 0 15px;
@@ -2091,7 +2132,13 @@ input:checked + .switcher:before {
         font-size: 1em;
     }
 
-    /*----------TUBES----------*/
+    .thought-bubble.selection-bubble{
+        padding: 3px 10px 10px;
+        top: 18%;
+        left: -12%;
+        font-size: .95em;
+    }
+
     #finished2{
         left: -60%;
     }
@@ -2108,12 +2155,12 @@ input:checked + .switcher:before {
     .footer-link-inner{
         margin: auto 5%;
     }
-
-    .footer-links span{
-        letter-spacing: normal;
+}
+@media (max-width: 705px) {
+    .thought-bubble.selection-bubble{
+        top: 7%;
     }
 }
-
 /******Small Devices (600px and below)******/
 @media (max-width: 600px) {
     /*----------NAVBAR----------*/
@@ -2172,6 +2219,7 @@ input:checked + .switcher:before {
         margin-top: 3.5%;
         padding-left: 10px;
         padding-right: 10px;
+        gap: 1em;
     }
 
     .tube{
@@ -2185,6 +2233,14 @@ input:checked + .switcher:before {
 
     .thought-bubble{
         left: 32%;
+    }
+
+    .move-the-bubble{
+        left: 38%;
+    }
+
+    .thought-bubble.selection-bubble{
+        font-size: .85em;
     }
 
     .like-it{
@@ -2230,7 +2286,7 @@ input:checked + .switcher:before {
     }
 
     .socials{
-        margin-bottom: 2%;
+        margin-bottom: 0%;
     }
 }
 
@@ -2259,7 +2315,6 @@ input:checked + .switcher:before {
 
     .row{
         height: 12em;
-        gap: 1em;
     }
 
     .thought-bubble{
@@ -2270,26 +2325,38 @@ input:checked + .switcher:before {
         padding: 10px 25px;
     }
 
+    .thought-bubble.selection-bubble{
+        top: 3%;
+        font-size: .75em;
+        left: -20%;
+    }
+
+    .move-the-bubble{
+        top: 26%;
+    }
+
     #finished2{
         font-size: 2em;
-        left: -55%;
+        left: -75%;
         top: 55px;
     }
 }
 
 @media (max-width: 470px) {
     /*--------NAVBAR----------*/
+    .about-me-div{
+        font-size: 1.1em;
+    }
+
     .about-me-p{
         font-size: .6em;
     }
 }
 
 @media (max-width: 460px) {
-.row{
-    gap: .5em;
-}
-
-
+    .row{
+        gap: .5em;
+    }
 }
 
 @media (max-width: 420px) {
@@ -2317,6 +2384,10 @@ input:checked + .switcher:before {
 
     .thought-bubble{
         left: 28%;
+    }
+
+    .move-the-bubble{
+        top: 25%;
     }
 }
 
@@ -2364,7 +2435,7 @@ input:checked + .switcher:before {
 
     /*----------TOP CONTAINER----------*/
     pre{
-        font-size: .6em !important;
+        font-size: .65em !important;
     }
     
     /*--------BOTTOM CONTAINER---------*/
@@ -2377,8 +2448,14 @@ input:checked + .switcher:before {
     }
 
     .thought-bubble{
-        font-size: .9em;
+        font-size: .8em;
         padding: 4px 20px;
+    }
+
+    .thought-bubble.selection-bubble{
+        top: 0%;
+        font-size: .65em;
+        left: -23%;
     }
 
     .cap{
@@ -2387,7 +2464,7 @@ input:checked + .switcher:before {
 
     /*----------FOOTER----------*/
     .footer{
-        padding-top: 2%;
+        padding-top: 3%;
     }
 
     .footer span{
@@ -2432,15 +2509,15 @@ input:checked + .switcher:before {
     .footer-link-inner {
         font-size: .9em;
     }
-
-    .footer-links span {
-        letter-spacing: 1.5px;
-    }
 }
 
 @media (max-width: 385px) {
     .explanation-heading{
         letter-spacing: .5px;
+    }
+
+    .thought-bubble.selection-bubble{
+        padding: 0px 5px 7px;
     }
 }
 
